@@ -1,0 +1,20 @@
+.. python-holidays documentation master file, created by
+   sphinx-quickstart on Sat Nov 27 12:00:54 2021.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root ``toctree`` directive.
+
+Welcome to python-holidays's documentation!
+===========================================
+
+.. toctree::
+   :maxdepth: 2
+   :caption: Contents:
+
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
