@@ -10,6 +10,7 @@ pytest-cov
 coverage[toml]
 pre-commit
 flake8
+sphinx
 
 # deployment
 pip>=19.2.3
